--- a/lightdm.ipynb
+++ b/lightdm.ipynb
@@ -236,49 +236,52 @@
     ">\n",
     "> Configuration is in keyfile format. For most installations you will want to change the keys in the `[Seat:*]` section as this applies to all seats on the system (normally just one).\n",
     "\n",
-    "\"Seat\" is an archaic term (but who knows, maybe we'll return to that style of computing in the future) when the computer occupied a room, and there were multiple seats in the room, each with a keyboard, mouse and a TTY. Currently we usually have a single \"seat\" (keyboard, mouse and display combination), but multiple TTYs (both \"real\" ones, the gettys launched by init on system startup, and \"pseudo\" ones, one for each terminal emulator ([xfce4-terminal](xterm.html). Simulacra and Simulation)."
+    "* More about seats: [tty](tty.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2858831",
+   "metadata": {},
+   "source": [
+    "How does lightdm know which greeter to use?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b502e89e",
+   "execution_count": 16,
+   "id": "8eb5dc39",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root      2494     1  0 08:47 tty1     00:00:00 /sbin/getty 38400 tty1\n",
-      "root      2495     1  0 08:47 tty2     00:00:00 /sbin/getty 38400 tty2\n",
-      "root      2497     1  0 08:47 tty3     00:00:00 /sbin/getty 38400 tty3\n",
-      "root      2498     1  0 08:47 tty4     00:00:00 /sbin/getty 38400 tty4\n",
-      "root      2502     1  0 08:47 tty5     00:00:00 /sbin/getty 38400 tty5\n",
-      "root      2503     1  0 08:47 tty6     00:00:00 /sbin/getty 38400 tty6\n",
-      "root      2504     1  0 08:47 ?        00:00:00 /sbin/getty -L 0 ttyAMA0 vt100\n"
+      "# greeters-directory = Directory to find greeters\n",
+      "#greeters-directory=$XDG_DATA_DIRS/lightdm/greeters:$XDG_DATA_DIRS/xgreeters\n"
      ]
     }
    ],
    "source": [
-    "ps -ef | grep '[g]etty'"
+    "cat /etc/lightdm/lightdm.conf | grep greeters-dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "b465d9cd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SESSION_MANAGER=local/localhost:@/tmp/.ICE-unix/2597,unix/localhost:/tmp/.ICE-unix/2597\n",
       "XDG_CONFIG_DIRS=/etc/xdg\n",
       "XDG_SESSION_PATH=/org/freedesktop/DisplayManager/Session0\n",
       "XDG_MENU_PREFIX=xfce-\n",
       "XDG_CONFIG_HOME=/home/m/.config\n",
-      "DESKTOP_SESSION=xfce\n",
       "XDG_SEAT=seat0\n",
       "XDG_SESSION_DESKTOP=xfce\n",
       "XDG_SESSION_TYPE=x11\n",
@@ -290,20 +293,90 @@
       "XDG_VTNR=7\n",
       "XDG_SESSION_ID=c2\n",
       "XDG_RUNTIME_DIR=/run/user/1000\n",
-      "XDG_DATA_DIRS=/usr/local/share:/usr/share\n",
-      "GDMSESSION=xfce\n",
-      "DBUS_SESSION_BUS_ADDRESS=unix:path=/tmp/dbus-A9Byg2xw50,guid=c86b4088f03c6cfcadd70ce76844fbf6\n"
+      "XDG_DATA_DIRS=/usr/local/share:/usr/share\n"
      ]
     }
    ],
    "source": [
-    "env | grep -e 'XDG' -e 'SESSION' -e 'DESKTOP'"
+    "env | grep -e 'XDG'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cb6db454",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: /usr/local/share/xgreeters: No such file or directory\n",
+      "\u001b[0;0mlightdm-gtk-greeter.desktop\u001b[m\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "123",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "source": [
+    "echo $XDG_DATA_DIRS | tr ':' '\\n' | xargs -n 1 -I % ls %/xgreeters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8448f7f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/share/xgreeters/lightdm-gtk-greeter.desktop is owned by lightdm-gtk-greeter-2.0.8-r3\n"
+     ]
+    }
+   ],
+   "source": [
+    "apk info --who-owns /usr/share/xgreeters/lightdm-gtk-greeter.desktop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d4e8183",
+   "metadata": {},
+   "source": [
+    "So when I chose Xfce, `/usr/sbin/setup-desktop` installed both lightdm and lightdm-gtk-greeter, the latter installing this desktop file which lightdm uses unconfigured (I presume because it's the only one).\n",
+    "\n",
+    "There is also a `~/.dmrc`, but from what I gather, lightdm is the one which writes it for us (https://github.com/canonical/lightdm), and going by the creation time, on first login."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6e72dc27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Desktop]\n",
+      "Session=xfce\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat ~/.dmrc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19eb6839",
+   "id": "46249953",
    "metadata": {},
    "outputs": [],
    "source": []
