--- a/install.ipynb
+++ b/install.ipynb
@@ -85,12 +85,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bf423cd",
+   "cell_type": "markdown",
+   "id": "4481e2bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## sys mode\n",
+    "\n",
+    "sys mode, the one I'm using, is where the Alpine system is installed to a hard disk."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c3f4182",
+   "metadata": {},
+   "source": [
+    "## Upgrade\n",
+    "\n",
+    "From APK section in the alpine user handbook (https://docs.alpinelinux.org/user-handbook/0.1a/Working/apk.html):\n",
+    "\n",
+    "> Updating the system using apk is very simple. One need only run `apk upgrade`. Technically, this is two steps: `apk update`, followed by `apk upgrade` proper. The first step will download an updated package index from the repositories, while the second step will update all packages in world, as well as their dependencies.\n",
+    "\n",
+    "More about world in [apk](apk.html). Continuing...\n",
+    "\n",
+    "> `apk` will overwrite files you may have changed. These will usually by in the `/etc` directory. Whenever `apk` wants to install a file, but realizes a potentially edited one is already present, it will write its file to that file name with `.apk-new` appended. You may handle these by hand, but a utility called `update-conf` exists. Simply invoking it normally will present you with the difference between the two files, and offer various choices for dealing with the conflicts.\n",
+    ">\n",
+    "> > `apk update` is only ran once your cache is invalidated, which by default happens every 4 hours."
+   ]
   }
  ],
  "metadata": {
