--- a/upgrade.ipynb
+++ b/upgrade.ipynb
@@ -47,6 +47,57 @@
     "\n",
     "If every thing goes well, we'll require a `reboot`. See you on the other side!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5feb589f",
+   "metadata": {},
+   "source": [
+    "## Back!\n",
+    "\n",
+    "Survived."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "442ffa59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.22.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat /etc/alpine-release"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a89a0845",
+   "metadata": {},
+   "source": [
+    "The reboot was apparently not necessary, I could've just restarted the services that were updated, but reboot was easier. From wiki:\n",
+    "\n",
+    "> All services that have been upgraded need to be restarted, to begin using the upgraded version. If the kernel is upgraded, it's required to it's required to reboot to begin the upgraded version.\n",
+    ">\n",
+    "> ```sh\n",
+    "> sync\n",
+    "> reboot\n",
+    "> ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf85999",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
