--- a/upgrade.ipynb
+++ b/upgrade.ipynb
@@ -92,12 +92,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdf85999",
+   "cell_type": "markdown",
+   "id": "b6f31164",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "`update-conf --list` shows a changed files - they need to be worked through individually (most of the new ones can be zapped, but not all)"
+   ]
   }
  ],
  "metadata": {
