--- a/git.ipynb
+++ b/git.ipynb
@@ -13,7 +13,7 @@
    "id": "ccc5cd41",
    "metadata": {},
    "source": [
-    "### Setup\n",
+    "## Setup\n",
     "\n",
     "```sh\n",
     "doas apk add git\n",
@@ -27,13 +27,9 @@
    "id": "f2bf4e1e",
    "metadata": {},
    "source": [
-    "### PAT\n",
+    "## PAT\n",
     "\n",
-    "To store the PAT, we'll use `git-credential-libsecret` (a `libsecret` implementation of `git credential`).\n",
-    "\n",
-    "> ### libsecret\n",
-    ">\n",
-    "> [libsecret](https://wiki.gnome.org/Projects/Libsecret) is a library for storing and retrieving passwords and other secrets. It communicates with the \"Secret Service\" using D-Bus.\n",
+    "To store the PAT, we'll use `git-credential`.\n",
     "\n",
     "> ### git-credential\n",
     ">\n",
@@ -41,6 +37,33 @@
     ">\n",
     "> [List](https://git-scm.com/doc/credential-helpers) of available credential helpers.\n",
     "\n",
+    "By default, git comes with two credential helpers: `git-credential-store` and `git-credential-cache`. We use `git-credential-store`. This will store our credential in a **plaintext file** at `~/.git-credentials`.\n",
+    "\n",
+    "Storing it is plaintext is not ideal but before freaking out, remember that that's the same level of security as your ssh key (now you can freak out for the _real_ reason, that both your git credentials _and_ SSH keys are plaintext).\n",
+    "\n",
+    "> There is a reasonably trivial way to use a better credential helper, `git-credential-libsecret`. That comes with a GNOME baggage though...\n",
+    ">\n",
+    "> Which leaves me wondering - it should be possible to make a simple credential store that use KEKs.\n",
+    "\n",
+    "```sh\n",
+    "git config --global credential.helper store\n",
+    "```\n",
+    "\n",
+    "Create the [PAT](https://github.com/settings/personal-access-tokens/new), and [perform any operation](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#using-a-personal-access-token-on-the-command-line) that requires authentication so that git asks for credentials and uses libsecret to store them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6588b7fa",
+   "metadata": {},
+   "source": [
+    "### PAT using libsecret\n",
+    "\n",
+    "To store the PAT using libsecret, we can use `git-credential-libsecret` (a `libsecret` implementation of `git credential`).\n",
+    "\n",
+    "> ### libsecret\n",
+    ">\n",
+    "> [libsecret](https://wiki.gnome.org/Projects/Libsecret) is a library for storing and retrieving passwords and other secrets. It communicates with the \"Secret Service\" using D-Bus.\n",
     "\n",
     "```sh\n",
     "doas apk add git-credential-libsecret\n",
@@ -76,10 +99,6 @@
     "git config --global credential.helper /usr/libexec/git-core/git-credential-libsecret\n",
     "```\n",
     "\n",
-    "Create the [PAT](https://github.com/settings/personal-access-tokens/new), and [perform any operation](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#using-a-personal-access-token-on-the-command-line) that requires authentication so that git asks for credentials and uses libsecret to store them.\n",
-    "\n",
-    "> Note: If libsecret is not present (or not desired), then git's built in \"store\" credential helper can store the credentials in a plaintext file in your home directory. Before freaking out, remember that that's the same level of security as your ssh key (now you can freak out).\n",
-    "\n",
     "### Resetting credentials\n",
     "\n",
     "```sh\n",
@@ -94,7 +113,7 @@
    "id": "5a77ad3f",
    "metadata": {},
    "source": [
-    "### Setup commit signing\n",
+    "## Setup commit signing\n",
     "\n",
     "Create a SSH key if needed (`ssh-keygen`), ask to git to use it to sign commits.\n",
     "```sh\n",
