--- a/install.ipynb
+++ b/install.ipynb
@@ -7,29 +7,22 @@
    "source": [
     "## Install\n",
     "\n",
-    "> What I did last time. Likely outdated, read what the [official docs](https://alpinelinux.org/) have to say.\n",
+    "Minimal install is just `setup-alpine`, then `setup-desktop`. The following is what _I_ did last time.\n",
+    "\n",
+    "> Likely outdated, read what the [official docs](https://alpinelinux.org/) have to say.\n",
     "\n",
     "```sh\n",
     "setup-alpine\n",
-    "# setup-keymap us us-dvorak\n",
+    "# setup-keymap us / us-dvorak\n",
     "# ntp-client busybox\n",
+    "# disk-mode sys\n",
+    "# user m\n",
     "reboot\n",
-    "apk add doas\n",
+    "\n",
+    "apk add doas docs emacs-nox git curl file\n",
+    "emacs /etc/apk/repositories\n",
     "echo \"permit nopass :m\" >>/etc/doas.d/doas.conf\n",
     "setup-desktop xfce\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cfd919f5",
-   "metadata": {},
-   "source": [
-    "### Post install\n",
-    "\n",
-    "```sh\n",
-    "doas apk add docs emacs-nox curl git\n",
-    "emacs /etc/apk/repositories\n",
     "```"
    ]
   },
@@ -91,7 +84,7 @@
    "source": [
     "## sys mode\n",
     "\n",
-    "sys mode, the one I'm using, is where the Alpine system is installed to a hard disk."
+    "sys mode is where the Alpine system is installed to a hard disk."
    ]
   }
  ],
