Notes from install

--- a/shell-notebooks.ipynb
+++ b/shell-notebooks.ipynb
@@ -17,13 +17,14 @@
     "\n",
     "```sh\n",
     "apk search jupyter\n",
-    "doas apk add jupyter-notebook\n",
+    "apk add jupyter-notebook\n",
     "```\n",
     "\n",
     "We want to run shell commands, and for this we need to install the [bash_kernel](https://github.com/takluyver/bash_kernel) (and bash).\n",
     "\n",
     "```sh\n",
-    "doas apk add bash\n",
+    "apk add bash\n",
+    "apk add py3-pip\n",
     "pip install --break-system-packages bash_kernel\n",
     "python -m bash_kernel.install\n",
     "```\n",
