--- a/uefi.ipynb
+++ b/uefi.ipynb
@@ -37,6 +37,33 @@
     "\n",
     "You head out of the room by typing `exit`. You find yourself in a new, more welcoming cavern, lined with menu items and other niceities. Maybe the princess is in this castle."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b6e5da0",
+   "metadata": {},
+   "source": [
+    "## QEMU\n",
+    "\n",
+    "Using UEFI with QEMU requires two things:\n",
+    "\n",
+    "1. A UEFI firmware implementation\n",
+    "2. A NVRAM emulation to store the UEFI variables\n",
+    "\n",
+    "QEMU comes with both (at least the homebrew version)\n",
+    "\n",
+    "1. `$(brew --prefix qemu)/share/qemu/edk2-aarch64-code.fd`\n",
+    "2. `$(brew --prefix qemu)/share/qemu/edk2-arm-vars.fd`\n",
+    "\n",
+    "Both of these can be offered to the QEMU machine as a pflash drives by tacking on something like the following to the QEMU invocation:\n",
+    "\n",
+    "```sh\n",
+    "  -drive file=edk2-aarch64-code.fd,if=pflash,format=raw,readonly=on \\\n",
+    "  -drive file=edk2-arm-vars.fd,if=pflash,format=raw \\\n",
+    "```\n",
+    "\n",
+    "There is also an option to store the UEFI variables in a JSON file instead of the provided pflash file by using `-device uefi-vars-sysbus,jsonfile=uefi.json`. It works, but I was unable to persist the UEFI boot delay when using this method (they work fine with the pflash vars). The JSON variable support is very new, so likely it is still work in progress, and future reader, don't take my word for it, maybe it works now."
+   ]
   }
  ],
  "metadata": {
