--- a/install.ipynb
+++ b/install.ipynb
@@ -15,14 +15,14 @@
     "setup-alpine\n",
     "# setup-keymap us / us-dvorak\n",
     "# ntp-client busybox\n",
-    "# disk-mode sys\n",
+    "# disk vda mode sys\n",
     "# user m\n",
     "reboot\n",
     "\n",
+    "vi /etc/apk/repositories # enable community, https\n",
     "apk add doas docs emacs-nox git curl file\n",
-    "emacs /etc/apk/repositories\n",
     "echo \"permit nopass :m\" >>/etc/doas.d/doas.conf\n",
-    "setup-desktop xfce\n",
+    "setup-desktop # xfce\n",
     "```"
    ]
   },
